<resources>
    <string name="app_name">CMS ATM</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>

    <string name="name">الاسم</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="additional_missions">مهام إضافية</string>
    <string name="bank_missions">مهام البنك</string>
    <string name="fixed_missions">المهام الثابتة</string>
    <string name="gps_enable">GPS is Disabled, Please Enable GPS to find your location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="let_s_start">Let\'s Start</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">ابدا عملك الان</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait</string>
    <string name="password">ادخل كلمه المرور</string>
    <string name="email">ادخل بريدك الالكتروني</string>
    <string name="username">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="forget_your_password">Forget Password</string>
    <string name="required">required</string>
    <string name="no_internet_con">no internet</string>
    <string name="login_failed">Login Failed</string>


    <string name="error_happened">Error Happened</string>
    <string name="empty_email">Empty Email</string>
    <string name="empty_password">Empty Password</string>

    <string name="signing_in">Signing In</string>
    <string name="signing_up">Signing Up</string>
    <string name="register_failed">Sign up failed, please try again later...</string>
    <string name="password_not_matched">Password not matched</string>

    <string name="nav_signout">Sign Out</string>

    <string name="data_saved">Saved Sucessful</string>
    <string name="cms">CMS</string>
    <string name="forgetpassword">نسيت كلمه المرور ؟</string>
    <string name="rememberme">تذكرني دائما...</string>
    <string name="todo">TODO</string>
    <string name="hello">مرحبا بك مجددا</string>

    <string name="register">قم بتسجيل دخولك وبدا عملك اليوم ونتمني لكيوم ملئ بالسعاده والحيوية</string>



</resources>
