<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/green"
    android:padding="16dp"
    tools:context=".activities.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="12dp"

                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|end"

                    >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"

                        android:src="@drawable/email"
                        android:contentDescription="@string/todo" />
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="end"
                    android:text="@string/cms"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="12dp"

                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start"
                    android:text="@string/hello"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="12dp"

                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="start"

                    android:text="@string/register"
                    android:textColor="@color/gray_bg"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_curve_white"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextSignInEmail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:digits="abcdefghijklmnopqrstuvwxyz 0123456789-_.@"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/email"
                        android:contentDescription="@string/todo" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_curve_white"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextSignInPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:gravity="center|end"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/password"
                        android:contentDescription="@string/todo" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:text="@string/rememberme"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/password"
                        android:contentDescription="@string/todo" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:background="@drawable/edit_text_curve_green"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center|start">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/password"
                android:contentDescription="@string/todo" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/edit_text_curve_green"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_margin="10dp"
        android:gravity="center"

        android:orientation="vertical">


        <Button
            android:id="@+id/buttonforgetpassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom|center"
            android:layout_weight="3"
            android:background="@color/green"
            android:text="@string/forgetpassword"
            android:textColor="@color/white"
            android:textSize="12sp" />
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="top|center"

            android:background="@color/green1">

        </LinearLayout>
    </LinearLayout>


</LinearLayout>